Mod: Tratando de resolver el avatar ;-(

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- ******HEADER****** -->         
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="images/avatar.jpg" alt="Daniel Navaza" />
+            <img class="profile-image img-responsive pull-left" src="images/avatargrande.jpg" alt="Daniel Navaza" />
             <div class="profile-content pull-left">
                 <h1 class="name">Daniel Navaza</h1>
                 <h2 class="desc">Web Developer + HR/Bussines Executive + Geek</h2>   
@@ -282,15 +282,7 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
                 
-                <aside class="blog aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Latest Blog Posts</h2>
-                        <p>You can use Sascha Depold's <a href="https://github.com/sdepold/jquery-rss" target="_blank">jQuery RSS plugin</a> to pull in your blog post feeds.</p>
-                        <div id="rss-feeds" class="content">
 
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
                 
                 <aside class="list music aside section">
                     <div class="section-inner">
