Mod: Trying to solve avatar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- ******HEADER****** -->         
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="images/avatargrande.jpg" alt="Daniel Navaza" />
+            <img class="profile-image img-responsive pull-left" src="images/avatarrounded.jpg" alt="Daniel Navaza" />
             <div class="profile-content pull-left">
                 <h1 class="name">Daniel Navaza</h1>
                 <h2 class="desc">Web Developer + HR/Bussines Executive + Geek</h2>   
