--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- ******HEADER****** -->         
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="images/avatarrounded.jpg" alt="Daniel Navaza" />
+            <img class="profile-image img-responsive pull-left" src="images/avatarrounded.png" alt="Daniel Navaza" />
             <div class="profile-content pull-left">
                 <h1 class="name">Daniel Navaza</h1>
                 <h2 class="desc">Web Developer + HR/Bussines Executive + Geek</h2>   
@@ -81,7 +81,7 @@
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" >
-                                <img class="img-responsive project-image" src="images/projects/project-4.png" alt="project name" />
+                                <img class="img-responsive project-image" src="images/projects/project-4.png" alt="Criptonyta" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12" href="https://t.me/Cryptoman2606" target="_blank">
                                     <h3 class="title"><a >Criptonyta | CriptoBot´s For Rent </a></h3>
@@ -92,7 +92,7 @@
                             
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12">
-                                <img class="img-responsive project-image" src="images/projects/project-1.png" alt="project name" />
+                                <img class="img-responsive project-image" src="images/projects/project-1.png" alt="Musiqueiros" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a >Musiqueiros</a></h3>
