Mod: Solving favicon issues

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
 <head>
     <title>CV Daniel Navaza</title>
-    <link rel="favicon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="images/favicon.ico" />
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
