Arreglando algunos links

--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                                         alt="Musiqueiros" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a>Musiqueiros</a></h3>
+                                    <h3 class="title"><a href="https://musiqueiro.herokuapp.com/"
+                                            target="_blank">Musiqueiros</a></h3>
                                     <p>Musiqueiros es el marketplace que vino a facilitar la vida de todos aquellos que
                                         tocan un instrumento musical y precisan vender sus creaciones. Através de esta
                                         plataforma, podrás publicar anuncios gratuitamente de los instrumentos musicales
@@ -224,14 +225,17 @@
                         <h2 class="heading">Otros proyectos</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title"><a href="#">Nombre del proyecto</a></h3>
-                                <p class="summary">Descripcion del proyecto. Ut enim ad minima veniam, quis nostrum
-                                    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                                    consequatu.</p>
-                                <p><a class="more-link"><i class="fa fa-external-link"></i> Conozca mas</a></p>
+                                <h3 class="title"><a
+                                        href="https://github.com/Criptonyta/mercadoliebre-marketplace">MarketPlace</a>
+                                </h3>
+                                <p class="summary">Un MarketPlace basado en uno de los grandes actores del sector,
+                                    aplicando HTML, CSS y algo de Js </p>
+                                <p><a class="more-link"
+                                        href="https://github.com/Criptonyta/mercadoliebre-marketplace"><i
+                                            class="fa fa-external-link"></i> Vealo en Github</a></p>
                             </div>
                             <!--//item-->
-                            <div class="item">
+                            <!-- <div class="item">
                                 <h3 class="title"><a href="#">Nombre del proyecto</a> <span
                                         class="label label-theme">Open Source</span></h3>
                                 <p class="summary">Descripcion del proyecto. Maecenas ornare ultricies risus, in
@@ -239,7 +243,7 @@
                                     in, molestie nulla. </p>
                                 <p><a class="more-link"><i class="fa fa-external-link"></i> Vealo en Github</a></p>
                             </div>
-                            <!--//item-->
+                           
                             <div class="item">
                                 <h3 class="title"><a href="#">Nombre del proyecto</a> <span
                                         class="label label-theme">Open Source</span></h3>
@@ -248,10 +252,10 @@
                                 </p>
                                 <p><a class="more-link"><i class="fa fa-external-link"></i> Vealo en GitHub</a></p>
                             </div>
-                            <!--//item-->
+                           
 
                             <a class="btn btn-cta-secondary" href="#">Mas en Github <i
-                                    class="fa fa-chevron-right"></i></a>
+                                    class="fa fa-chevron-right"></i></a> -->
 
                         </div>
                         <!--//content-->
